Added API to update user product state and removed relationshipId field from all model